--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,14 +17,8 @@ jobs:
 
       - name: Install Wine and Xvfb
         run: |
-          sudo dpkg --add-architecture i386
           sudo apt update
-          sudo apt install -y wine64 wine32 xvfb
-
-      - name: Start Xvfb
-        run: |
-          Xvfb :99 &
-          echo "DISPLAY=:99" >> $GITHUB_ENV
+          sudo apt install -y ninja-build gcc g++
 
       - name: Install requirements
         run: pip3 install -r requirements.txt
@@ -42,14 +36,8 @@ jobs:
     steps:
       - name: Install Wine and Xvfb
         run: |
-          sudo dpkg --add-architecture i386
           sudo apt update
-          sudo apt install -y wine64 wine32 xvfb
-
-      - name: Start Xvfb
-        run: |
-          Xvfb :99 &
-          echo "DISPLAY=:99" >> $GITHUB_ENV
+          sudo apt install -y ninja-build gcc g++
 
       - name: Install requirements
         run: pip3 install -r requirements.txt
