--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Wine and Xvfb
         run: |
           sudo apt update
-          sudo apt install -y ninja-build gcc g++ gcc-multilib g++-multilib libclang-dev
+          sudo apt install -y ninja-build gcc g++ gcc-multilib g++-multilib libclang-dev clang lld
 
       - name: Install requirements
         run: pip3 install -r requirements.txt
@@ -37,7 +37,7 @@ jobs:
       - name: Install Wine and Xvfb
         run: |
           sudo apt update
-          sudo apt install -y ninja-build gcc g++ gcc-multilib g++-multilib libclang-dev
+          sudo apt install -y ninja-build gcc g++ gcc-multilib g++-multilib libclang-dev clang lld
 
       - name: Install requirements
         run: pip3 install -r requirements.txt
