--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: Install requirements
         run: pip3 install -r requirements.txt
 
+      - name: Download MSVCRT40.DLL
+        run: wget "https://discmaster.textfiles.com/file/858/boot-disc-1998-05.iso/Utils/Online/Internet%20Explorer%204.01/IE4MFC40.CAB/MSVCRT40.DLL" -O compilers/msvc420/bin/MSVCRT40.DLL
+
       - name: make
         run: |
           make
@@ -42,11 +45,17 @@ jobs:
       - name: Install requirements
         run: pip3 install -r requirements.txt
 
+      - name: Download MSVCRT40.DLL to temp
+        run: wget "https://discmaster.textfiles.com/file/858/boot-disc-1998-05.iso/Utils/Online/Internet%20Explorer%204.01/IE4MFC40.CAB/MSVCRT40.DLL" -O /tmp/MSVCRT40.DLL
+
       - name: Checkout base branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.base_ref }}
           submodules: true
+
+      - name: Install MSVCRT40.DLL
+        run: cp /tmp/MSVCRT40.DLL compilers/msvc420/bin/MSVCRT40.DLL
 
       - name: Generate report on Base
         run: make report > report-before.txt
@@ -55,6 +64,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      - name: Install MSVCRT40.DLL
+        run: cp /tmp/MSVCRT40.DLL compilers/msvc420/bin/MSVCRT40.DLL
 
       - name: Generate report on PR
         run: make report > report-after.txt
